<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".CambioActivity">

    <TextView
        android:id="@+id/tv_seleccion2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_valor"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/et_valor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_valor"
        android:inputType="number" />

    <TextView
        android:id="@+id/tv_seleccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_seleccion"
        android:textSize="14sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_dolar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/rb_dolar" />

        <RadioButton
            android:id="@+id/rb_euro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rb_euro" />

        <RadioButton
            android:id="@+id/rb_libra"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rb_libra" />

        <RadioButton
            android:id="@+id/rb_peso"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rb_pesos" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/logousa" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/logoeu" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/logoru" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/logocol" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_resultado2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" />

    <Button
        android:id="@+id/bt_cambio"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="76dp"
        android:layout_height="78dp"
        android:layout_gravity="center"
        android:background="@drawable/logomone" />

    <TextView
        android:id="@+id/tv_resultado3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_resultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp" />

</LinearLayout>